deploy-ansible/kubernetes/manifests/ingress/test-hello.ing.yaml
# kubectl run test-hello --image=nginx --expose --port=80
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-hello
spec:
  rules:
  - host: hello.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-hello
          servicePort: 80
