deploy-ansible/kubernetes/manifests/ingress/whoami.ing.yaml
# kubectl run whoami --image=emilevauge/whoami --port=80 --expose
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-whoami
spec:
  rules:
  - host: who.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
